--- a/LuceneCustom/nbproject/project.properties
+++ b/LuceneCustom/nbproject/project.properties
@@ -25,9 +25,17 @@ dist.dir=dist
 dist.jar=${dist.dir}/LuceneCustom.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.lucene-analyzers-common-4.0.0.jar=C:\\Users\\Cyril\\Documents\\Work\\WIP\\Information Retrival\\Lab1\\Ressources\\lucene-4.0.0\\lucene-4.0.0\\analysis\\common\\lucene-analyzers-common-4.0.0.jar
+file.reference.lucene-core-4.0.0.jar=C:\\Users\\Cyril\\Documents\\Work\\WIP\\Information Retrival\\Lab1\\Ressources\\lucene-4.0.0\\lucene-4.0.0\\core\\lucene-core-4.0.0.jar
+file.reference.lucene-queries-4.0.0.jar=C:\\Users\\Cyril\\Documents\\Work\\WIP\\Information Retrival\\Lab1\\Ressources\\lucene-4.0.0\\lucene-4.0.0\\queries\\lucene-queries-4.0.0.jar
+file.reference.lucene-queryparser-4.0.0.jar=C:\\Users\\Cyril\\Documents\\Work\\WIP\\Information Retrival\\Lab1\\Ressources\\lucene-4.0.0\\lucene-4.0.0\\queryparser\\lucene-queryparser-4.0.0.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.lucene-analyzers-common-4.0.0.jar}:\
+    ${file.reference.lucene-core-4.0.0.jar}:\
+    ${file.reference.lucene-queries-4.0.0.jar}:\
+    ${file.reference.lucene-queryparser-4.0.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
