--- a/LuceneCustom/nbproject/project.properties
+++ b/LuceneCustom/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=LuceneCustom
+application.vendor=Cyril
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,13 +25,16 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/LuceneCustom.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.lucene-analyzers-common-4.0.0.jar=C:\\Users\\Cyril\\Documents\\Work\\WIP\\Information Retrival\\Lab1\\Ressources\\lucene-4.0.0\\lucene-4.0.0\\analysis\\common\\lucene-analyzers-common-4.0.0.jar
 file.reference.lucene-core-4.0.0.jar=C:\\Users\\Cyril\\Documents\\Work\\WIP\\Information Retrival\\Lab1\\Ressources\\lucene-4.0.0\\lucene-4.0.0\\core\\lucene-core-4.0.0.jar
 file.reference.lucene-queries-4.0.0.jar=C:\\Users\\Cyril\\Documents\\Work\\WIP\\Information Retrival\\Lab1\\Ressources\\lucene-4.0.0\\lucene-4.0.0\\queries\\lucene-queries-4.0.0.jar
 file.reference.lucene-queryparser-4.0.0.jar=C:\\Users\\Cyril\\Documents\\Work\\WIP\\Information Retrival\\Lab1\\Ressources\\lucene-4.0.0\\lucene-4.0.0\\queryparser\\lucene-queryparser-4.0.0.jar
 includes=**
-jar.compress=false
+jar.archive.disabled=${jnlp.enabled}
+jar.compress=true
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.lucene-analyzers-common-4.0.0.jar}:\
     ${file.reference.lucene-core-4.0.0.jar}:\
@@ -59,6 +63,15 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=lucenecustom.LuceneCustom
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
