--- a/LuceneCustom/nbproject/project.properties
+++ b/LuceneCustom/nbproject/project.properties
@@ -27,19 +27,12 @@ dist.jar=${dist.dir}/LuceneCustom.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.lucene-analyzers-common-4.0.0.jar=C:\\Users\\Cyril\\Documents\\Work\\WIP\\Information Retrival\\Lab1\\Ressources\\lucene-4.0.0\\lucene-4.0.0\\analysis\\common\\lucene-analyzers-common-4.0.0.jar
-file.reference.lucene-core-4.0.0.jar=C:\\Users\\Cyril\\Documents\\Work\\WIP\\Information Retrival\\Lab1\\Ressources\\lucene-4.0.0\\lucene-4.0.0\\core\\lucene-core-4.0.0.jar
-file.reference.lucene-queries-4.0.0.jar=C:\\Users\\Cyril\\Documents\\Work\\WIP\\Information Retrival\\Lab1\\Ressources\\lucene-4.0.0\\lucene-4.0.0\\queries\\lucene-queries-4.0.0.jar
-file.reference.lucene-queryparser-4.0.0.jar=C:\\Users\\Cyril\\Documents\\Work\\WIP\\Information Retrival\\Lab1\\Ressources\\lucene-4.0.0\\lucene-4.0.0\\queryparser\\lucene-queryparser-4.0.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=true
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.lucene-analyzers-common-4.0.0.jar}:\
-    ${file.reference.lucene-core-4.0.0.jar}:\
-    ${file.reference.lucene-queries-4.0.0.jar}:\
-    ${file.reference.lucene-queryparser-4.0.0.jar}
+    ${libs.Lucene.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
